ronda 2026-09-14: revisión + mejoras + pulido + fixes
